--- a/templates/animal/index.html.twig
+++ b/templates/animal/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AnimalController!{% endblock %}
+{% block title %}Home Page{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1> Adicionar animais</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/murilo/Projetos-Symfonys/fazendaSystem/src/Controller/AnimalController.php'|file_link(0) }}">src/Controller/AnimalController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/murilo/Projetos-Symfonys/fazendaSystem/templates/animal/index.html.twig'|file_link(0) }}">templates/animal/index.html.twig</a></code></li>
-    </ul>
+
 </div>
 {% endblock %}
