--- a/templates/animal/form.html.twig
+++ b/templates/animal/form.html.twig
@@ -17,26 +17,7 @@
         <div class="card-body text-dark">
        {{ form(form) }}
         </div>
-        {% for msg in app.flashes('success') %}
-            <div class="alert alert-success alert-dismissible d-flex mx-3" role="alert">
-                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
-                <div>
-                    {{ msg }}
-                </div>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        {% endfor %}
-
-        {% for msg in app.flashes('erro') %}
-            <div class="alert alert-danger alert-dismissible d-flex mx-3" role="alert">
-                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-                <div>
-                    {{ msg }}
-                </div>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        {% endfor %}
-
+        {{ include('includes/alerts.html.twig') }}
     </div>
 
 
