--- a/templates/animal/lista.html.twig
+++ b/templates/animal/lista.html.twig
@@ -10,17 +10,19 @@
                     <th scope="col">Peso(Kg)</th>
                     <th scope="col">Data de Nascimento</th>
                     <th scope="col">Situação</th>
+                    <th scope="col">Editar</th>
                 </tr>
             </thead>
             <tbody>
             {% for animal in animais %}
                 <tr>
-                    <td>45</td>
+                    <td>{{ animal.id }}</td>
                     <td>{{ animal.leite }}</td>
                     <td>{{ animal.racao }}</td>
                     <td>{{ animal.peso }}</td>
                     <td>{{ animal.nascimento|date("d/m/Y") }}</td>
                     <td>{{ animal.situacao }}</td>
+                    <td> <button class="btn btn-primary" href="#">Editar</button> </td>
                 </tr>
             {% endfor %}
 
