FEAT - Add id na criação e edição do formulário

--- a/templates/animal/editar.html.twig
+++ b/templates/animal/editar.html.twig
@@ -15,7 +15,7 @@
     <div class="container mt-xxl-5">
         <div class="card border-dark" style="width: fit-content">
             <div class="card-body text-dark">
-                <div class="card-title"><h2>{{ titulo }}</h2></div>
+                <div class="card-title"><h2>{{ titulo }} com identificador #{{ id }}</h2></div>
                 {{ form(formulario) }}
             </div>
             {{ include('includes/alerts.html.twig') }}
