--- a/templates/animal/lista.html.twig
+++ b/templates/animal/lista.html.twig
@@ -21,9 +21,8 @@
                     <td>{{ animal.racao }}</td>
                     <td>{{ animal.peso }}</td>
                     <td>{{ animal.nascimento|date("d/m/Y") }}</td>
-                    <td>{{ animal.situacao }}</td>
+                    <td>{% if animal.situacao == 1%}Vivo{% else %}Abatido{% endif %}</td>
                     <td> <a id="botao" class="btn btn-primary" href="{{ path('animal_editar',{id: animal.id}) }}">Editar</a> </td>
-
                 </tr>
             {% endfor %}
 
