--- a/templates/animal/form.html.twig
+++ b/templates/animal/form.html.twig
@@ -15,7 +15,7 @@
         <div class="card border-dark" style="width: fit-content">
 
             <div class="card-body text-dark">
-                <div class="card-title"><h2>{{ titulo }}</h2></div>
+                <div class="card-title"><h2 class="d-inline-block">{{ titulo }}</h2> <div class="d-inline-block" style="font-size: 1.5rem"> #{{ id }}</div></div>
                 {{ form(form) }}
             </div>
             {{ include('includes/alerts.html.twig') }}
