REFACTOR - Resetting alerts

--- a/templates/animal/form.html.twig
+++ b/templates/animal/form.html.twig
@@ -18,7 +18,7 @@
                 <div class="card-title"><h2 class="d-inline-block">{{ titulo }}</h2> <div class="d-inline-block" style="font-size: 1.5rem"> #{{ id }}</div></div>
                 {{ form(form) }}
             </div>
-            {{ include('includes/alerts.html.twig') }}
+            {{ include('includes/alertsADD.html.twig') }}
         </div>
         {{ include('animal/lista.html.twig',animais) }}
     </div>
