STYLE - centering form and changing card color

--- a/templates/animal/form.html.twig
+++ b/templates/animal/form.html.twig
@@ -12,7 +12,7 @@
 
 {% block formulario %}
     <div class="container mt-1">
-        <div class="card border-dark" style="width: fit-content">
+        <div class="card border-dark m-auto" style="width: fit-content;">
 
             <div class="card-body text-dark">
                 <div class="card-title"><h2 class="d-inline-block">{{ titulo }}</h2> <div class="d-inline-block" style="font-size: 1.5rem"> #{{ id }}</div></div>
