--- a/templates/animal/editar.html.twig
+++ b/templates/animal/editar.html.twig
@@ -8,17 +8,17 @@
         .align-items-center{
             max-width: 1026px;
         }
+
     </style>
 {% endblock %}
 
-{% block editar %}
-    <div class="container mt-xxl-5">
+{% block body %}
+    <div class="container" style="padding-top: 77px">
         <div class="card border-dark" style="width: fit-content">
             <div class="card-body text-dark">
-                <div class="card-title"><h2>{{ titulo }} com identificador #{{ id }}</h2></div>
+                <div class="card-title"><h2>{{ titulo }} #{{ id }}</h2></div>
                 {{ form(formulario) }}
             </div>
         </div>
     </div>
-
 {% endblock %}
