--- a/templates/homePage.html.twig
+++ b/templates/homePage.html.twig
@@ -3,23 +3,23 @@
 {% block body %}
         <div class="container-fluid" style="padding-top: 77px">
             <div class="row justify-content-between">
-                <div class="card border-warning mb-3 ms-3" style="max-width: 26rem; ">
-                    <div class="card-header"><h6>Quantidade de leite produzido por semana</h6></div>
+                <div class="card border-warning mb-3 ms-3" style="max-width: 18rem; ">
+                    <div class="card-header"><h6>Produção de leite semanal</h6></div>
                     <div class="card-body">
                         <h5 class="card-title text-center">500 L</h5>
                     </div>
                 </div>
 
-                <div class="card border-warning mb-3 ms-3" style="max-width: 50rem;">
-                    <div class="card-header"><h6>Total de animais que tenham até 1 ano de
-                            idade e que consumam mais de 500Kg de ração</h6></div>
+                <div class="card border-warning mb-3 ms-3" style="max-width: 40rem;">
+                    <div class="card-header"><h6 class="text-center">Animais que tenham até 1 ano de
+                            idade e que consumam mais de 500Kg de ração semanalmente</h6></div>
                     <div class="card-body">
                         <h5 class="card-title text-center">103 animais</h5>
                     </div>
                 </div>
 
-                <div class="card border-warning mb-3 ms-3 me-2" style="max-width: 26rem;">
-                    <div class="card-header"><h6>Quatidade de ração necessária por semana</h6></div>
+                <div class="card border-warning mb-3 ms-3 me-2" style="max-width: 18rem;">
+                    <div class="card-header"><h6>Demanda de ração semanal</h6></div>
                     <div class="card-body">
                         <h5 class="card-title text-center">2000 kg</h5>
                     </div>
