--- a/templates/homePage.html.twig
+++ b/templates/homePage.html.twig
@@ -5,28 +5,29 @@
             <div class="row justify-content-between">
                 <div class="card border-warning mb-3 ms-3" style="max-width: 18rem; ">
                     <div class="card-header"><h6>Produção de leite semanal</h6></div>
-                    <div class="card-body">
+                    <div class="card-body pt-2 pb-0">
                         <h5 class="card-title text-center">{{ producao_leite}} L</h5>
                     </div>
                 </div>
 
-                <div class="card border-warning mb-3 ms-3" style="max-width: 40rem;">
+                <div class="card border-warning mb-3 ms-3" style="max-width: 54rem;">
                     <div class="card-header"><h6 class="text-center">Animais que tenham até 1 ano de
                             idade e que consumam mais de 500Kg de ração semanalmente</h6></div>
-                    <div class="card-body">
-                        <h5 class="card-title text-center">500 animais</h5>
+                    <div class="card-body pt-2 pb-0">
+                        <h5 class="card-title text-center mb-0">500 animais</h5>
                     </div>
                 </div>
 
                 <div class="card border-warning mb-3 ms-3 me-2" style="max-width: 18rem;">
                     <div class="card-header"><h6>Demanda de ração semanal</h6></div>
-                    <div class="card-body">
+                    <div class="card-body pt-2 pb-0">
                         <h5 class="card-title text-center">{{ demanda_racao }} kg</h5>
                     </div>
                 </div>
 
             </div>
         </div>
+        <hr class="mt-0 mb-2">
 
         {% block formulario %}{% endblock %}
         {% block lista %}{% endblock %}
