FEAT - Add relatorio1

--- a/templates/homePage.html.twig
+++ b/templates/homePage.html.twig
@@ -14,7 +14,7 @@
                     <div class="card-header"><h6 class="text-center">Animais que tenham até 1 ano de
                             idade e que consumam mais de 500Kg de ração semanalmente</h6></div>
                     <div class="card-body pt-2 pb-0">
-                        <h5 class="card-title text-center mb-0">500 animais</h5>
+                        <h5 class="card-title text-center mb-0">{{ relatorio1 }} animais</h5>
                     </div>
                 </div>
 
