--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,12 +57,16 @@
         <header>
             <nav class="navbar col-12 position-fixed navbar-expand-lg bg-light " style="background-image: linear-gradient(to right, #EDD30C, #F06900); z-index: 999;">
                 <div class="container-fluid col-11 m-auto" style="background-image: linear-gradient(to right, #EDD30C, #F06900);">
-                    <a class="navbar-brand cor-font-nav destaque-button" href="{{ path('animal_adicionar') }}" >Animais</a>
+                    <a class="navbar-brand cor-font-nav destaque-button" href="{{ path('home_page') }}" >Início</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse " id="navbarNav">
                         <ul class="navbar-nav" >
+                            <li class="nav-item">
+                                <a class="nav-link active me-3 destaque-button" onMouseOver="this.style.color='white'"
+                                   onMouseOut="this.style.color='black'"  aria-current="page" href="{{ path('animal_adicionar') }}">Animais</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link active me-3 destaque-button" onMouseOver="this.style.color='white'"
                                    onMouseOut="this.style.color='black'"  aria-current="page" href="{{ path('animais_abate') }}">Animais para abate</a>
