--- a/templates/homePage.html.twig
+++ b/templates/homePage.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
-{% block stylesheets %}{% endblock %}
 {% block body %}
-        <div class="container-fluid" style="padding-top: 77px">
+        <div class="container" style="padding-top: 77px">
             <div class="row justify-content-between">
                 <div class="card border-warning mb-3 ms-3" style="max-width: 18rem; ">
                     <div class="card-header"><h6>Produção de leite semanal</h6></div>
@@ -27,10 +26,6 @@
 
             </div>
         </div>
-        <hr class="mt-0 mb-2">
-
-        {% block formulario %}{% endblock %}
-        {% block lista %}{% endblock %}
 
 {% endblock %}
 
